--- a/iOSapp/iOSappTests/iOSappTests-Info.plist
+++ b/iOSapp/iOSappTests/iOSappTests-Info.plist
@@ -18,5 +18,9 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>621212444558338</string>
+	<key>FacebookDisplayName</key>
+	<string>Test iOS app</string>
 </dict>
 </plist>
